gateway_controller_testing/microservices/subscriber-pods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriber-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriber-pod
  template:
    metadata:
      labels:
        app: subscriber-pod
        
    spec:
      volumes:
        - name: cert-volume
          secret:
            secretName: example-cert
        - name: testing-data-volume
          persistentVolumeClaim:
            claimName: testing-data-pvc
      containers:
      - name: subscriber-pod
        image: davidanthonyvarley/subscriber-pod:latest

        command: ["python3"]
        args:
          - subscriber-pod.py
          - --cert=/certs/tls.crt
          - --key=/certs/tls.key
        volumeMounts:
          - name: cert-volume
            mountPath: /certs
          - name: testing-data-volume
            mountPath: /mnt/testing-data

        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
