gateway_controller_testing/microservices/subscriber-pods/cbr-httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cbr-httproute
  namespace: default
spec:
  hostnames:
  - www.example.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
  rules:
  - matches:
    - method: GET
      path:
        type: PathPrefix
        value: /get
    backendRefs:
    - group: ""
      kind: Service
      name: http-1p1-helloworld
      port: 3000
      weight: 1

  - matches:
    - method: GET
      path:
        type: PathPrefix
        value: /mq
    backendRefs:
      - group: ""
        kind: Service
        name: producer-service
        port: 8080
        weight: 1
