gateway_controller_testing/microservices/subscriber-pods/figure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cbr-static-example
  namespace: default
spec:
  parentRefs:
  - name: example-gateway
  rules: 
  - matches:
    - path:
        type: PathPrefix
        value: /v1/search
    - headers:
      - name: x-subscriber-type
        value: "premium"
    backendRefs:
    - name: premium-storage-service
      port: 443
  - matches:
    - headers:
      - name: x-subscriber-type
        value: "basic"
    backendRefs:
    - name: standard-storage-service
      port: 443
